--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 2,
-    "name": "En Google modified by Gulfweed",
-    "version": "2.1",
+    "name": "engoogle",
+    "version": "1.0",
     "description": "Add a quick language switching feature, etc. on Google",
+    "default_locale":"ja",
     "content_scripts": [
     {
       "js": [
